# chibiml

./: .gitignore  LICENSE.txt  OMakefile  OMakeroot  README.mkd  chibiml.ml  chibiml.opam  dune
compiler/: CAM.ml  CAM.mli  ZAM.ml  ZAM.mli  alpha.ml  alpha.mli  constFold.ml  constFold.mli  cps.ml  cps.mli  elim.ml  elim.mli  env.ml  env.mli  eval.ml  eval.mli  fresh.ml  fresh.mli  inline.ml  inline.mli  inv.ml  inv.mli  source.ml  source.mli  syntax.ml  syntax.mli  type.ml  type.mli  typeScheme.ml  typeScheme.mli  typing.ml  typing.mli  untyped.ml  untyped.mli
compiler-test/: dune
example/: 91.ml  arith.ml  even-odd.ml  factorial.ml  tarai.ml
lib/: CAM.ml  CAM.mli  OMakefile  ZAM.ml  ZAM.mli  alpha.ml  alpha.mli  closure.ml  closure.mli  config.ml  constFold.ml  constFold.mli  core.ml  core.mli  cps.ml  cps.mli  dune  elim.ml  elim.mli  env.ml  env.mli  eval.ml  eval.mli  fresh.ml  fresh.mli  inline.ml  inline.mli  inv.ml  inv.mli  lexer.mll  mnf.ml  mnf.mli  parser.mly  pretty.ml  pretty.mli  refcount.ml  refcount.mli  source.ml  source.mli  syntax.ml  (+9 more)
src/: OMakefile  main.ml
test/: OMakefile  test_parsing.ml  test_typing.ml
